# File-Transfer

./: .gitignore  CMakeLists.txt  Discovery.cpp  Dockerfile  Network.cpp  README.md  a.xml  execute.sh  main.cpp  r.cpp  r.txt
ci/: Dockerfile  Root-Launch.sh  entrypoint.sh  file-transfer.desktop  generateAppImage.sh
inc/: DeviceDiscovery.h  DeviceInterface.h  DiscoveryThread.h  FileReceive.h  Network.h  NetworkInterface.h  NetworkManager.h  Receiver.h  ReceivingServer.h  SFTPAccess.h  Sender.h  Sony.h  Utils.h  networknamespace.h
libs/Qt5/: CMakeLists.txt
misc/: Docker-container-history  Error xcb  Host-Download-History  Host-File-Transfer-History
res/: fonts.qrc  qml.qrc
res/qml/: LoadingBox.qml  ReceiveFile.qml  SendFile.qml  main.qml
scripts/: enableSFTP.sh  networkInfo.sh
src/: DeviceDiscovery.cpp  DeviceInterface.cpp  DiscoveryThread.cpp  FileReceive.cpp  Network.cpp  NetworkInterface.cpp  NetworkManager.cpp  Receiver.cpp  ReceivingServer.cpp  SFTPAccess.cpp  Sender.cpp  Sony.cpp  Utils.cpp  main.cpp
utils/: File-Transfer.desktop
utils/AppImage/: File-Transfer.desktop
